--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -20,7 +20,7 @@
       <td>
         <table cellpadding="15" cellspacing="0" border="0" align="center" width="100%">      
           <tr>
-            <td><%= link_to image_tag(@base_url + Spree::Config[:logo], :alt => Spree::Config[:site_name], :style => "border: 0"), root_url %></td>
+            <td><%= link_to image_tag(@base_url + '/images/ + Spree::Config[:logo], :alt => Spree::Config[:site_name], :style => "border: 0"), root_url %></td>
             <td align="right">
               <p><%= l @email.created_at, :format => "%B %d, %Y" %></p>
               <p><b><%= t("subject") %>:</b> <%= @email_subject %></p>
