better i18n support in checkbox

--- a/app/views/hooks/_signup_checkbox.html.erb
+++ b/app/views/hooks/_signup_checkbox.html.erb
@@ -1,2 +1,2 @@
 <%= check_box_tag(:newsletter) %>
-<%= label_tag(:newsletter, t("subscribe newsletter too")) %>
+<%= label_tag(:newsletter, t(:subscribe_newsletter_too)) %>
