value set to "1" instead of 1

--- a/app/views/hooks/_signup_checkbox.html.erb
+++ b/app/views/hooks/_signup_checkbox.html.erb
@@ -1,4 +1,4 @@
 <p>
-  <%= check_box_tag(:newsletter, 1, true) %>
+  <%= check_box_tag(:newsletter, "1", true) %>
   <%= label_tag(:newsletter, t(:subscribe_newsletter_too)) %>
 </p>
